# 3d-engine

./: .gitignore  CMakeLists.txt  README.md  engine.py
readmes/: CONTROLS.md  HOWTORUN.md
src/: Inputs.h  Maths.h  Renderer.h  Scene.h  State.h  data.py  inputs.py  main.cpp  main.py  objects.py  renderer.py  state.py  tools.py
